--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           </div>
           <div class="contact-right">
             <form action="sendemail.php" method="post">
-              <input type="text" id="name" name="Name" placeholder="Your Name" required>
+              <input type="text" id="name" name="name" placeholder="Your Name" required>
               <input type="email" id="email" name="email" placeholder="Your email" required>
               <textarea id="message" name="Message" rows="6"> Your Message</textarea>
               <button type="submit" value="submit" class="btn btn2">Submit</button>
