--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <h1 class="subtitle">About me</h1>
                     <p>I'm a Junior Graphic Designer based in Turin.
                     I Graduated at Politecnico of Turin in Graphic Design and Visual Comunication in 2022.
-                    I love to express my self trough creativity and immagination. My skillset is wide and I am always striving to expand my knowledge and improve my craft.</p>
+                    I love to express my self through creativity and immagination. My skillset is wide and I am always striving to expand my knowledge and improve my craft.</p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
