--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
               <a href="https://www.behance.net/giacomogaretto"><i class="fa-brands fa-behance"></i></a>
               <a href="https://www.instagram.com/jackgaretto.png/"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <a href="immagini/CV Giacomo Garetto.pdf" download class="btn">Download CV</a>
+            <a href="immagini/CV Giacomo Garetto 2023  EN.pdf" download class="btn">Download CV</a>
           </div>
           <div class="contact-right">
             <form action="sendemail.php" method="post">
