--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <h1 class="subtitle">About me</h1>
                     <p>I'm a Junior Graphic Designer based in Turin.
                     I Graduated at Politecnico of Turin in Graphic Design and Visual Comunication in 2022.
-                    I love to express my self through creativity and immagination. My skillset is wide and I am always striving to expand my knowledge and improve my craft.</p>
+                    I love to express my self through creativity and imagination. My skillset is wide and I am always striving to expand my knowledge and improve my craft.</p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -95,7 +95,7 @@
                       <ul>
                         <li><span>Branding</span><br><br>Logo Design, Brand identity, Coordinate Image</li>
                         <li><span>3D Modelling</span><br><br>Modelling, Texturing, Animations, Mockups</li>
-                        <li><span>Photography</span><br><br>Editing, Color correction, photomontage</li>
+                        <li><span>Photography</span><br><br>Editing, Color correction, Photomontage</li>
                         <li><span>Vector Design</span><br><br>Illustrations, textures, patterns</li>
                       </ul>
                     </div>
@@ -109,7 +109,7 @@
                     </div><div class="tab-contents" id="experience">
                       <ul>
                         <li><span>Stage</span><br><br>NOODLES Comunicazione S.R.L, 2 months</li>
-                        <li><span>Work</span><br><br>Small Giants, 3D artist.</li>
+                        <li><span>Work</span><br><br>NOODLES Comunicazione S.R.L, Junior Graphic Designer.<br>Small Giants, 3D artist.</li>
                       </ul>
                     </div>
                 </div>
