--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <li><span>Branding</span><br><br>Logo Design, Brand identity, Coordinate Image</li>
                         <li><span>3D Modelling</span><br><br>Modelling, Texturing, Animations, Mockups</li>
                         <li><span>Photography</span><br><br>Editing, Color correction, Photomontage</li>
-                        <li><span>Vector Design</span><br><br>Illustrations, textures, patterns</li>
+                        <li><span>Vector Design</span><br><br>Illustrations, Textures, Patterns</li>
                       </ul>
                     </div>
                     <div class="tab-contents" id="education">
@@ -109,7 +109,7 @@
                     </div><div class="tab-contents" id="experience">
                       <ul>
                         <li><span>Stage</span><br><br>NOODLES Comunicazione S.R.L, 2 months</li>
-                        <li><span>Work</span><br><br>NOODLES Comunicazione S.R.L, Junior Graphic Designer.<br>Small Giants, 3D artist.</li>
+                        <li><span>Work</span><br><br>NOODLES Comunicazione S.R.L, Junior Graphic Designer.<br><br>Small Giants, 3D artist.</li>
                       </ul>
                     </div>
                 </div>
