--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#000000">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="style.css">
     <link rel="preload"
         href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@100..900&family=Lato:wght@100;300;400;700;900&display=swap"
